--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "boilerplate",
   "version": "1.0.0",
-  "description": "Simple react app",
+  "description": "React boilderplate",
   "main": "index.js",
   "scripts": {
     "test": "karma start",
     "start": "node server.js"
   },
-  "author": "Andrew Mead",
+  "author": "Dave Fryer",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.9.1",
